--- a/backend/.env.example
+++ b/backend/.env.example
@@ -7,8 +7,11 @@ DATABASE_URL=postgresql://user:password@localhost:5432/homegamehero
 MONGODB_URI=mongodb://localhost:27017/homegamehero
 
 # JWT Configuration
-JWT_SECRET=your-secret-key-here
-JWT_EXPIRES_IN=7d
+JWT_SECRET=your-secret-key-change-in-production
+JWT_EXPIRES_IN=24h
+
+# Security Configuration
+ALLOWED_ORIGINS=http://localhost:3000,http://localhost:3001
 
 # Logging
 LOG_LEVEL=info
