--- a/backend/package.json
+++ b/backend/package.json
@@ -16,9 +16,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
+    "express-mongo-sanitize": "^2.2.0",
+    "express-rate-limit": "^7.5.0",
     "express-validator": "^7.0.1",
     "helmet": "^7.1.0",
     "joi": "^17.13.3",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
     "winston": "^3.11.0"
   },
@@ -26,6 +29,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.11",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20.11.10",
     "@types/supertest": "^6.0.3",
     "@typescript-eslint/eslint-plugin": "^6.20.0",
