--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -25,5 +25,5 @@
     "allowUnusedLabels": false
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist", "**/*.test.ts", "**/*.spec.ts"]
+  "exclude": ["node_modules", "dist", "**/*.test.ts", "**/*.spec.ts", "src/examples/**/*"]
 }
