--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,8 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.58.0",
     "react-router-dom": "^6.30.1",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "tailwind-merge": "^3.3.1",
     "zustand": "^5.0.5"
   },
